--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -135,6 +135,18 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -144,6 +156,7 @@ body {
   border-radius: 100px;
   /* transition all for simple animation on all properties */
   transition: all 0.2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -163,4 +176,38 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+/* :: defines a pseudo-element,
+treated like a child of the main element for inheritance 
+purposes */
+.btn::after {
+  /* content must be defined, even if empty */
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  /* relative to first parent having position: relative*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  /* duration timingfunc delay */
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  /* apply the styles for 0% before the animateion begins */
+  animation-fill-mode: backwards;
 }
