--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -59,18 +59,20 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+/* We use the BEM architecture to make it easier to understand the structure:
+BEM class naming convention = block__element--modifier */
+.header__logo-box {
   /* positioning will be determined by parent which needs its position set to relative*/
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   /* position is absolute, so in relation to the parent */
   top: 40%;
@@ -89,7 +91,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   /* By default, a span element is inline, so it would normally display like text, sequentially.
     We use a block display style to make the element use its entire width */
   display: block;
@@ -107,7 +109,7 @@ body {
 */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -189,7 +191,7 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -212,7 +214,7 @@ purposes */
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -221,7 +223,7 @@ purposes */
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   /* duration timingfunc delay */
   animation: moveInBottom 0.5s ease-out 0.75s;
   /* apply the styles for 0% before the animateion begins */
