--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -1,11 +1,18 @@
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
+$color-grey-dark: #777;
+$color-white: #fff;
+
 /* * is the universal selector. This is used here to apply a full reset */
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-  /* Better practise for plugin support */ }
+  box-sizing: inherit; /* Better practise for plugin support */
+}
 
 html {
   /* Set the root font size to make life easier
@@ -15,32 +22,40 @@ html {
   we specify a percentage of the user agent / browser
   default. */
   /* This also supports zooming */
-  font-size: 62.5%;
-  /* 62.5% is approx 10px if user = 16px */ }
+  font-size: 62.5%; /* 62.5% is approx 10px if user = 16px */
+}
 
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: #777;
+  color: $color-grey-dark;
   /* add a border around the entire webpage */
   padding: 3rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .header {
   /* vh lets us set a percentage of viewport height */
   height: 95vh;
   /* add a gradient on top of an image */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url(../img/hero.jpg);
   /* cover will always try to fit the image within the viewport */
   background-size: cover;
   background-position: top;
   /* set position: relative to make children determine their positions relative to this */
   position: relative;
+
   /* specify the 4 clockwise coords that lay out the visible section.
     Check out https://bennettfeely.com/clippy/ for a generator */
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
 
 /* We use the BEM architecture to make it easier to understand the structure:
 BEM class naming convention = block__element--modifier */
@@ -48,10 +63,12 @@ BEM class naming convention = block__element--modifier */
   /* positioning will be determined by parent which needs its position set to relative*/
   position: absolute;
   top: 4rem;
-  left: 4rem; }
+  left: 4rem;
+}
 
 .header__logo {
-  height: 3.5rem; }
+  height: 3.5rem;
+}
 
 .header__text-box {
   position: absolute;
@@ -61,14 +78,16 @@ BEM class naming convention = block__element--modifier */
   /* transform moves the element relative to ITSELF, in this case to center the middle */
   transform: translate(-50%, -50%);
   /* Align text content including display: inline-block to center*/
-  text-align: center; }
+  text-align: center;
+}
 
 .heading-primary {
-  color: #fff;
+  color: $color-white;
   text-transform: uppercase;
   /* Sometimes animations show a jerky movement at the end. This is a 'fix'. */
   backface-visibility: hidden;
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+}
 
 .heading-primary--main {
   /* By default, a span element is inline, so it would normally display like text, sequentially.
@@ -85,7 +104,8 @@ BEM class naming convention = block__element--modifier */
   /*
     animation-delay: 3s; 
         animation-iteration-count: 3;
-*/ }
+*/
+}
 
 .heading-primary--sub {
   display: block;
@@ -93,37 +113,54 @@ BEM class naming convention = block__element--modifier */
   font-weight: 700;
   letter-spacing: 1.75rem;
   /* We can implement an animation using the short-hand animation style */
-  animation: moveInRight 1s ease-out; }
+  animation: moveInRight 1s ease-out;
+}
 
 /* Use @keyframes to define animations */
 /* Browsers are optimised to animate opacity and transform */
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem); }
+    transform: translateX(-10rem);
+  }
+
   80% {
-    transform: translateX(1rem); }
+    transform: translateX(1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem); }
+    transform: translateX(10rem);
+  }
+
   80% {
-    transform: translateX(-1rem); }
+    transform: translateX(-1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(3rem); }
+    transform: translateY(3rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateY(0); } }
+    transform: translateY(0);
+  }
+}
 
 .btn:link,
 .btn:visited {
@@ -135,23 +172,27 @@ BEM class naming convention = block__element--modifier */
   /* transition all for simple animation on all properties */
   transition: all 0.2s;
   position: relative;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+}
 
 .btn:hover {
   transform: translateY(-3px);
   /* X Y Blur Color */
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
 
 /* active = click */
 .btn:active {
   /* relative to the initial state, NOT hover */
   transform: translateY(-1px);
   /* Shrink the shadow on click for natural effect */
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
 
 .btn--white {
-  background-color: #fff;
-  color: #777; }
+  background-color: $color-white;
+  color: $color-grey-dark;
+}
 
 /* :: defines a pseudo-element,
 treated like a child of the main element for inheritance 
@@ -168,17 +209,21 @@ purposes */
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all 0.4s; }
+  transition: all 0.4s;
+}
 
 .btn--white::after {
-  background-color: #fff; }
+  background-color: $color-white;
+}
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .btn--animated {
   /* duration timingfunc delay */
   animation: moveInBottom 0.5s ease-out 0.75s;
   /* apply the styles for 0% before the animateion begins */
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
