--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -1,17 +1,12 @@
-@import 'abstracts/functions';
-@import 'abstracts/mixins';
-@import 'abstracts/variables';
-
-@import 'base/animations';
-@import 'base/base';
-@import 'base/typography';
-@import 'base/utilities';
-
-@import 'components/button';
-
-@import 'layout/header';
-
-@import 'pages/home';
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: $color-grey-dark;
+  /* add a border around the entire webpage */
+  padding: 3rem;
+}
 
 .heading-primary {
   color: $color-white;
