--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -141,6 +141,34 @@ body {
     /* apply the styles for 0% before the animateion begins */
     animation-fill-mode: backwards; }
 
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: '';
+    display: table;
+    clear: both; }
+  .row [class^='col-'] {
+    background-color: orangered;
+    float: left; }
+    .row [class^='col-']:not(:last-child) {
+      margin-right: 2rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 2rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 2rem) / 3); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 2rem) / 4); }
+  .row .col-2-of-3 {
+    width: calc( 2 * (100% - 2 * 2rem) / 3 + 2rem); }
+  .row .col-2-of-4 {
+    width: calc( 2 * (100% - 3 * 2rem) / 4 + 2rem); }
+  .row .col-3-of-4 {
+    width: calc( 3 * (100% - 3 * 2rem) / 4 + 2 * 2rem); }
+
 .header {
   /* vh lets us set a percentage of viewport height */
   height: 95vh;
@@ -172,33 +200,3 @@ body {
     transform: translate(-50%, -50%);
     /* Align text content including display: inline-block to center*/
     text-align: center; }
-
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  /* Sometimes animations show a jerky movement at the end. This is a 'fix'. */
-  backface-visibility: hidden;
-  margin-bottom: 6rem; }
-  .heading-primary--main {
-    /* By default, a span element is inline, so it would normally display like text, sequentially.
-      We use a block display style to make the element use its entire width */
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    /* animation-timing-function adjusts the play speed of the animation.
-      See https://developer.mozilla.org/en-US/docs/Web/CSS/animation-timing-function for more information. */
-    animation-timing-function: ease-out;
-    /*
-      animation-delay: 3s; 
-      animation-iteration-count: 3;
-    */ }
-  .heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    /* We can implement an animation using the short-hand animation style */
-    animation: moveInRight 1s ease-out; }
