--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -9,41 +9,7 @@
 
 @import 'components/button';
 
+@import 'layout/grid';
 @import 'layout/header';
 
 @import 'pages/home';
-
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-  /* Sometimes animations show a jerky movement at the end. This is a 'fix'. */
-  backface-visibility: hidden;
-  margin-bottom: 6rem;
-
-  &--main {
-    /* By default, a span element is inline, so it would normally display like text, sequentially.
-      We use a block display style to make the element use its entire width */
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    /* animation-timing-function adjusts the play speed of the animation.
-      See https://developer.mozilla.org/en-US/docs/Web/CSS/animation-timing-function for more information. */
-    animation-timing-function: ease-out;
-    /*
-      animation-delay: 3s; 
-      animation-iteration-count: 3;
-    */
-  }
-
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    /* We can implement an animation using the short-hand animation style */
-    animation: moveInRight 1s ease-out;
-  }
-}
