Building the About Section
Adds an About section inside the main element. Introduces utility classes, implements the floated grid layout and adds some cool image rendering features.

--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -9,11 +9,11 @@
     /* transition all for simple animation on all properties */
     transition: all 0.2s;
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
   }
 
   &:hover {
-    transform: translateY(-3px);
+    transform: translateY(-0.3rem);
     /* X Y Blur Color */
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 
@@ -26,7 +26,7 @@
   /* active = click */
   &:active {
     /* relative to the initial state, NOT hover */
-    transform: translateY(-1px);
+    transform: translateY(-0.1rem);
     /* Shrink the shadow on click for natural effect */
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
@@ -63,5 +63,30 @@
     animation: moveInBottom 0.5s ease-out 0.75s;
     /* apply the styles for 0% before the animateion begins */
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 0.1rem solid $color-primary;
+    padding: 0.3rem;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-0.2rem);
+  }
+
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
+    transform: translateY(0);
   }
 }
