--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -1,13 +1,12 @@
 .card {
+  // FUNCTIONALITY
   perspective: 150rem; // The lower the value, the more dramatic the perspective effect.
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem;
+  height: 52rem;
 
   &__side {
-    color: #fff;
-    font-size: 2rem;
-    height: 50rem;
+    height: 52rem;
     transition: all 0.8s ease;
     position: absolute; // This takes the cards out of their natural flow and collapses them, affecting their height. So we must give .card its own height.
     top: 0;
@@ -15,6 +14,7 @@
     width: 100%;
     backface-visibility: hidden;
     border-radius: 0.3rem;
+    overflow: hidden; // This fixes the image corners from hiding the border-radius
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
     &--front {
@@ -36,10 +36,83 @@
 
   // When we hover on the card, we apply the effect to the card__side:
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &__side--back {
     transform: rotateY(0);
+  }
+
+  // FRONT SIDE STYLING
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen; // This is a new CSS property for applying filter effects to images.
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    &--1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+
+    &--2 {
+      background-image: url(../img/nat-5.jpg);
+    }
+
+    &--3 {
+      background-image: url(../img/nat-5.jpg);
+    }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+
+  &__heading-span {
+    &--1 {
+      padding: 1rem 1.5rem;
+      // box-decoration-break applies box decoration separately to individual line break boxes
+      -webkit-box-decoration-break: clone;
+      box-decoration-break: clone;
+
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; // simple way to center
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 0.1rem solid $color-grey-light-2;
+        }
+      }
+    }
   }
 }
