--- a/natours/sass/layout/_header.scss
+++ b/natours/sass/layout/_header.scss
@@ -16,6 +16,7 @@
 
   /* specify the 4 clockwise coords that lay out the visible section.
     Check out https://bennettfeely.com/clippy/ for a generator */
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
   /* We use the BEM architecture to make it easier to understand the structure:
