--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -40,6 +40,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   /* :: defines a pseudo-element,
   treated like a child of the main element for inheritance 
   purposes */
