Building the Stories Section - Part 3
Introduces the 'figure' and 'figcaption' HTML 5 elements.
Introduces image property 'filter'.

--- a/natours/sass/components/_story.scss
+++ b/natours/sass/components/_story.scss
@@ -21,13 +21,42 @@
     clip-path: circle(50% at 50% 50%);
     // This is the easiest way to add space between the shape and the text:
     transform: translateX(-3rem) skewX(12deg);
+    position: relative;
   }
 
   &__img {
     height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden; // often fixes issues with animation glitches
+    transition: all 0.5s;
   }
 
   &__text {
     transform: skewX(12deg);
+  }
+
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    color: $color-white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; // fix for shaking at end of animation
+  }
+
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+
+  &:hover &__img {
+    transform: translateX(-4rem) scale(1);
+    // Image filters: blur and make darker
+    filter: blur(3px) brightness(80%);
   }
 }
