--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -32,3 +32,34 @@
   position: relative;
   padding: 15rem 0;
 }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
+
+.book {
+  // Here we specify the position at which we want the gradient colors to start by adding % into the linear-gradient definition.
+  // This allows us to define a 'solid color' gradient, with a sudden transition. This is an alternative to using the polygon with clip-path.
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
+  background-size: cover; // 100% is the same as using cover
+  border-radius: 0.3rem;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+  height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
+}
