--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -694,6 +694,35 @@ body {
   top: 0;
   transform: rotate(-135deg); }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); }
+  .popup__content {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    width: 75vw;
+    height: 75vh; }
+  .popup__images {
+    display: inline-block;
+    width: auto;
+    height: 100%; }
+    .popup__images--1 {
+      height: 50%;
+      display: block; }
+    .popup__images--2 {
+      height: 50%;
+      display: block; }
+  .popup__text {
+    float: right; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
