--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -700,7 +700,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); }
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 5000; }
   .popup__content {
     display: block;
     position: absolute;
@@ -708,20 +709,31 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    width: 75vw;
-    height: 75vh; }
+    width: 75vw; }
   .popup__images {
-    display: inline-block;
-    width: auto;
-    height: 100%; }
+    position: relative;
+    float: left;
+    width: 30vw; }
     .popup__images--1 {
-      height: 50%;
+      height: auto;
+      width: auto;
+      max-width: 100%;
       display: block; }
     .popup__images--2 {
-      height: 50%;
+      height: auto;
+      width: auto;
+      max-width: 100%;
       display: block; }
   .popup__text {
-    float: right; }
+    display: inline-block;
+    padding: 12vh 3vw; }
+    .popup__text .heading-secondary {
+      font-size: 2vw;
+      font-weight: 900;
+      white-space: nowrap; }
+    .popup__text .heading-tertiary {
+      font-size: 1vw;
+      font-weight: 900; }
 
 .section-about {
   background-color: #f7f7f7;
