--- a/natours/sass/layout/_popup.scss
+++ b/natours/sass/layout/_popup.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color-black, 0.8);
+  background-color: rgba($color-black, 0.9);
+  z-index: 5000;
 
   &__content {
     display: block;
@@ -14,26 +15,41 @@
     transform: translate(-50%, -50%);
     background-color: $color-white;
     width: 75vw;
-    height: 75vh;
   }
 
   &__images {
-    display: inline-block;
-    width: auto;
-    height: 100%;
+    position: relative;
+    float: left;
+    width: 30vw;
 
     &--1 {
-      height: 50%;
+      height: auto;
+      width: auto;
+      max-width: 100%;
       display: block;
     }
 
     &--2 {
-      height: 50%;
+      height: auto;
+      width: auto;
+      max-width: 100%;
       display: block;
     }
   }
 
   &__text {
-    float: right;
+    display: inline-block;
+    padding: 12vh 3vw;
+
+    .heading-secondary {
+      font-size: 2vw;
+      font-weight: 900;
+      white-space: nowrap;
+    }
+
+    .heading-tertiary {
+      font-size: 1vw;
+      font-weight: 900;
+    }
   }
 }
