--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -423,7 +423,7 @@ body {
   left: 0;
   top: -0.4rem; }
   .form__radio-button::after {
-    content: "";
+    content: '';
     display: block;
     height: 1.3rem;
     width: 1.3rem;
@@ -438,6 +438,103 @@ body {
 
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1; }
+
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  /* Using paren display: table and child display: table-cell we can 
+     easily render two boxes side-by-side that have the same height, using vertical-align: middle */
+  /*
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($color-black, 0.9);
+  z-index: 5000;
+
+  &__content {
+    display: block;
+    @include absCenter;
+    background-color: $color-white;
+    width: 75vw;
+  }
+
+  &__images {
+    position: relative;
+    float: left;
+    width: 30vw;
+
+    &--1 {
+      height: auto;
+      width: auto;
+      max-width: 100%;
+      display: block;
+    }
+
+    &--2 {
+      height: auto;
+      width: auto;
+      max-width: 100%;
+      display: block;
+    }
+  }
+
+  &__text {
+    display: inline-block;
+    padding: 12vh 3vw;
+
+    .heading-secondary {
+      font-size: 2vw;
+      font-weight: 900;
+      white-space: nowrap;
+    }
+
+    .heading-tertiary {
+      font-size: 1vw;
+      font-weight: 900;
+    }
+  }*/ }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: #fff;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 0.3rem;
+    display: table;
+    overflow: hidden; }
+  .popup__left {
+    width: 33.333333%;
+    display: table-cell; }
+  .popup__right {
+    width: 66.666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup__img {
+    display: block;
+    width: 100%; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 0.1rem solid #eee;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 0.1rem solid #eee;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
 
 .story {
   width: 75%;
@@ -668,7 +765,7 @@ body {
     background-color: #333;
     display: inline-block; }
   .navigation__icon::before, .navigation__icon::after {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     transition: all 0.2s; }
@@ -693,47 +790,6 @@ body {
 .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
   top: 0;
   transform: rotate(-135deg); }
-
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  z-index: 5000; }
-  .popup__content {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    width: 75vw; }
-  .popup__images {
-    position: relative;
-    float: left;
-    width: 30vw; }
-    .popup__images--1 {
-      height: auto;
-      width: auto;
-      max-width: 100%;
-      display: block; }
-    .popup__images--2 {
-      height: auto;
-      width: auto;
-      max-width: 100%;
-      display: block; }
-  .popup__text {
-    display: inline-block;
-    padding: 12vh 3vw; }
-    .popup__text .heading-secondary {
-      font-size: 2vw;
-      font-weight: 900;
-      white-space: nowrap; }
-    .popup__text .heading-tertiary {
-      font-size: 1vw;
-      font-weight: 900; }
 
 .section-about {
   background-color: #f7f7f7;
