--- a/natours/sass/abstracts/_mixins.scss
+++ b/natours/sass/abstracts/_mixins.scss
@@ -6,7 +6,14 @@
   }
 }
 
-// Clever trick to renter gradient text:
+@mixin absCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+// Clever trick to render gradient text:
 @mixin gradient-text-effect {
   display: inline-block;
   background-image: linear-gradient(
