--- a/natours/sass/base/_base.scss
+++ b/natours/sass/base/_base.scss
@@ -16,6 +16,18 @@ html {
   default. */
   /* This also supports zooming */
   font-size: 62.5%; /* 62.5% is approx 10px if user = 16px */
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1rem = 12px, 12/16 = 75%
+  }
 }
 
 body {
