--- a/natours/sass/layout/_header.scss
+++ b/natours/sass/layout/_header.scss
@@ -19,6 +19,11 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
+  @include respond(phone) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+
   /* We use the BEM architecture to make it easier to understand the structure:
   BEM class naming convention = block__element--modifier */
   &__logo-box {
