--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -4,8 +4,6 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: $color-grey-dark;
-  /* add a border around the entire webpage */
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -27,6 +25,12 @@ body {
     /* animation-timing-function adjusts the play speed of the animation.
       See https://developer.mozilla.org/en-US/docs/Web/CSS/animation-timing-function for more information. */
     animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-family: 5rem;
+    }
+
     /*
       animation-delay: 3s; 
       animation-iteration-count: 3;
@@ -40,6 +44,10 @@ body {
     letter-spacing: 1.75rem;
     /* We can implement an animation using the short-hand animation style */
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -52,6 +60,14 @@ body {
 
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
