--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -438,7 +438,10 @@ body {
       outline: 1.5rem solid #55c57a;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
-      z-index: 20; }
+      z-index: 200; }
+      @media (max-width: 56.25em) {
+        .composition__photo:hover {
+          transform: scale(1.4) translateY(-0.5rem); } }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
