--- a/natours/sass/components/_composition.scss
+++ b/natours/sass/components/_composition.scss
@@ -50,7 +50,10 @@
       outline: 1.5rem solid $color-primary;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
-      z-index: 20;
+      z-index: 200;
+      @include respond(tab-port) {
+        transform: scale(1.4) translateY(-0.5rem);
+      }
     }
   }
   // Make non-hovered images smaller
