--- a/natours/sass/abstracts/_mixins.scss
+++ b/natours/sass/abstracts/_mixins.scss
@@ -48,25 +48,26 @@ ORDER: Base + typography > general layout + grid > page layout > components
   @if $breakpoint == phone {
     // rem and em in media queries are NOT affected by the root font size setting. They take their values from the browser settings.
     // We use em, because rem sometimes don't work for media queries in some browsers.
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       // 600px / 16
       @content;
     }
   }
   @if $breakpoint == tab-port {
-    @media (max-width: 56.25em) {
+    // The "only screen and" part ensures that the query doesn't get applied to print layouts.
+    @media only screen and (max-width: 56.25em) {
       // 900px / 16
       @content;
     }
   }
   @if $breakpoint == tab-land {
-    @media (max-width: 75em) {
+    @media only screen and (max-width: 75em) {
       // 1200px / 16
       @content;
     }
   }
   @if $breakpoint == big-desktop {
-    @media (min-width: 112.5em) {
+    @media only screen and (min-width: 112.5em) {
       // 1800 / 16
       @content;
     }
